--- a/pom.xml
+++ b/pom.xml
@@ -24,7 +24,7 @@
     <artifactId>xmlsec</artifactId>
     <packaging>bundle</packaging>
     <name>Apache XML Security for Java</name>
-    <version>2.0.0-jentrata-SNAPSHOT</version>
+    <version>2.0.0-jentrata-01</version>
     <description>
         Apache XML Security for Java supports XML-Signature Syntax and Processing,
         W3C Recommendation 12 February 2002, and XML Encryption Syntax and
